# schema-validate-app-py-component

./: .coveragerc  .gitignore  .pytest_covrc  Dockerfile  README.md  horusec-config.json  main.py  mypy.ini  pylintrc  pytest.ini  requirements.txt  setup.cfg  tox.ini
plugin/: __init__.py
plugin/domain/: exceptions.py  manifest.py  validation.py
plugin/entrypoint/cli/: __init__.py  apply.py  main.py
plugin/infrastructure/resource/: interface.py
plugin/infrastructure/resource/aws/cdk/: main.py
plugin/infrastructure/resource/aws/cdk/engine/: helpers.py  main.py
plugin/infrastructure/resource/aws/cdk/stacks/: __init__.py  api_stack.py  lambda_stack.py
plugin/infrastructure/resource/aws/services/: main.py
plugin/usecase/schemavalidate/: interface.py  main.py
plugin/usecase/schemavalidate/flavors/: function.yml
plugin/utils/: file.py  string.py
plugin/utils/logging/: __init__.py  logger_app.py
src/layers/avro/: requirements.txt
src/layers/xray/: requirements.txt
src/schema_validation/: main.py
src/schema_validation/domain/: api_model.py  environment.py  exceptions.py  message.py  model.py
src/schema_validation/utils/: __init__.py  logger.py
template/: manifest.yaml
tests/plugin/infrastructure/cdk/: test_aws_cdk.py  test_cdk_engine.py  test_cdk_engine_helpers.py  test_cdk_lambda.py  test_create_lambda_for_schema_validation.py
tests/plugin/infrastructure/services/: test_s3.py  test_service_gateway.py  test_service_lambda.py  test_service_s3.py
tests/plugin/usecase/: test_create_data_schema_validate.py
(+13 files in other folders)
