[metadata]
name = plugin
version = 1.0.1
description = An analytical plugin
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3.9

[options]
packages = find:
include_package_data = True
package_dir =
    =plugin
install_requires =
    attrs==21.2.0
    aws-cdk.assertions==1.148.0
    aws-cdk.aws-glue==1.148.0
    aws-cdk.aws-iam==1.148.0
    aws-cdk.aws-lambda==1.148.0
    aws-cdk.aws-s3==1.148.0
    aws-cdk.aws-apigateway==1.148.0
    aws-cdk.aws_dynamodb==1.148.0
    aws-cdk.core==1.148.0
    boto3==1.18.61
    botocore==1.21.61
    chevron==0.14.0
    click==8.0.3
    jmespath==0.10.0
    packaging==20.9
    pathspec==0.8.1
    pluggy==0.13.1
    py==1.10.0
    pylint==2.12.2
    pyparsing==2.4.7
    python-dateutil==2.8.1
    PyYAML==5.4.1
    six==1.15.0
    toml==0.10.2
    tox==3.24.4
    typing-extensions~=3.7
    urllib3==1.26.6
    utils==1.0.1
python_requires >=3.9.0

[options.packages.find]
where=plugin

[options.entry_points]
console_scripts =
    data-schema-validation = entrypoint.cli.main:cli

[options.extras_require]
test =
    tox
    pytest
    mock
